# ganak

./: .clang-tidy  .clangd  .gitignore  .gitmodules  .vimsettings.vim  AUTHORS  CLAUDE.md  CMakeLists.txt  EMSCRIPTEN.md  LICENSE.txt  README.md  TODO-synthesis.md  bug_trace.txt  building.md  cache-issue-wdnnf.md  flake.nix  ganakConfig.cmake.in  pyproject.toml  setup.py  test_mpfi.cpp
.github/workflows/: binary-build.yml  build-emscripten.yml  build.yml  dynamic-build.yml  main.yml  nix.yml  python-wheels.yml  release.yml  static-build.yml
benchmarks/: best-mnist-196-bnn_5_5.dimacs.processed  toy.cnf  toy.cnf.out  toy1.cnf  toy10.cnf  toy2.cnf  toy3.cnf  toy4.cnf  toy5.cnf  toy6.cnf  toy7.cnf  toy8.cnf  toy9.cnf  toy_1.cnf  toy_pmc.cnf
cmake/: FindFLINT.cmake  FindMPFI.cmake  FindMPFR.cmake  GetGitRevisionDescription.cmake  ganakConfig-buildtree.cmake.in
documents/: analysis-uip-shrink-header-parsing-bug.md  bugs_comp_analyzer.txt  corruption_of_vars_act_dec.txt  cube_improvements.txt  cube_miscounting_bug.txt  out-ganak-mccomp2324-1193808-0-vs-out-ganak-mccomp2324-1256426-0.md  plan_for_cube_improvement.txt  restart_cube_analysis.md  restart_cube_cnt_bug.md  todo_bring_cadical_props.md
html/: chain.js  index.html  rsync.sh
python/: README.md
python/src/: pyganak.cpp
python/tests/: test_pyganak.py
scripts/: bench_ddnnf_cleanup.py  build_clang.sh  build_clang_analyze.sh  build_debug.sh  build_emscripten.sh  build_nopcc.sh  build_norm.sh  build_notest.sh  build_release.sh  build_sanitize.sh  build_static.sh  build_static_release.sh  cache_miss_bucket_summary.py  convert_cpx_new_format.py  convert_cpx_old_format.py  dot.sh  ganak.py  mccomp_run_approx.sh  mccomp_run_exact.sh  rebuild_dynamic_all.sh  rebuild_dynamic_all_notest.sh  rebuild_emcripten_all.sh  rebuild_static_all.sh  rebuild_static_all_release.sh  run_ganak.sh  run_sym_ganak.sh
scripts/data/: analyze_preproc.py  clean.sh  create_graphs_ganak.py  ganak.sqlite  get_data_ganak.py
src/: CMakeLists.txt  GitSHA1.cpp.in  GitSHA1.h  GitSHA1.hpp  IFlowCutter.cc  IFlowCutter.cpp  IFlowCutter.h  IFlowCutter.hpp  MersenneTwister.h  MersenneTwister.hpp  TreeDecomposition.cc  TreeDecomposition.cpp  TreeDecomposition.h  TreeDecomposition.hpp  Vec.h  Vec.hpp  XAlloc.hpp  alt_comp_analyzer.cpp  alt_comp_analyzer.h  alt_comp_analyzer.hpp  alt_component_analyzer.cpp  alt_component_analyzer.h  avgcalc.h  avgcalc.hpp  bitset.h  bitset.hpp  boundedqueue.h  boundedqueue.hpp  ccnr.cpp  ccnr.hpp  ccnr_cms.cpp  ccnr_cms.hpp  chibihash64.h  clauseallocator.cpp  clauseallocator.h  clauseallocator.hpp  common.h  common.hpp  comp_analyzer.cpp  comp_analyzer.hpp  (+80 more)
src/buddy-2.4/: CMakeLists.txt
src/buddy-2.4/src/: bdd.h  bddio.c  bddop.c  cache.h  kernel.c  prime.c  reorder.c
src/clhash/: CMakeLists.txt  clhash.c  clhash.cpp  clhash.h  minim.c  minim.h
src/comp_types/: CMakeLists.txt  base_comp.hpp  base_packed_comp.cpp  base_packed_comp.h  base_packed_comp.hpp  cacheable_comp.h  cacheable_comp.hpp  canon_info.hpp  comp.h  comp.hpp  comp_archetype.cpp  comp_archetype.h  comp_archetype.hpp  difference_packed_comp.h  difference_packed_comp.hpp  hashed_comp.hpp
src/component_types/: CMakeLists.txt  ClHashComponent.h  base_packed_component.cpp  base_packed_component.h  cacheable_component.h  component.h  component_archetype.cpp  component_archetype.h  difference_packed_component.h  packed_component.cpp  packed_component.h  simple_packed_component.h  simple_unpacked_component.h  sparsegraph_component.h
src/flow-cutter-pace17/: LICENSE  README.md
src/flow-cutter-pace17/src/: array_id_func.h  array_id_func.hpp  back_arc.h  back_arc.hpp  cch_order.h  cch_order.hpp  cell.cpp  cell.h  cell.hpp  chain.h  chain.hpp  connected_components.h  connected_components.hpp  contraction_graph.h  contraction_graph.hpp  count_range.h  count_range.hpp  filter.h  filter.hpp  flow_cutter.h  flow_cutter.hpp  flow_cutter_config.hpp  greedy_order.cpp  greedy_order.h  greedy_order.hpp  heap.h  heap.hpp  histogram.h  histogram.hpp  id_func.h  id_func.hpp  id_func_traits.hpp  id_multi_func.h  id_multi_func.hpp  id_sort.h  id_sort.hpp  io_helper.hpp  list_graph.cpp  list_graph.h  list_graph.hpp  (+27 more)
src/nauty/: nausparse.h  nautinv.h  naututil.h  nauty.h
static_bin/: MIS.py  ganak.py  outputfile
tests/: ddnnf_fuzz.py  ddnnf_synth.py  ddnnf_verify.py  test_mpqi.cpp
tests/cnf-files/: CMakeLists.txt  a.cnf  b.cnf  c.cnf  d.cnf  e.cnf  f.cnf  g.cnf  h.cnf  laurent-test1-rz.cnf  laurent-test2.cnf  laurent-test3.cnf  laurent-test4.cnf  laurent-test5.cnf  lit.cfg  lit.site.cfg.in  mode0.cnf  mode1.cnf  mode13.cnf  mode2_invalid_pureim.cnf  mode2_invalid_purereal.cnf  mode2_invalid_spacesepar.cnf  mode2_valid.cnf  mode3.cnf  mode4.cnf  mode5.cnf  mode6.cnf  mode7.cnf  unsat.cnf
tests/cnf-files/ddnnf/: decompose.cnf  freevars.cnf  known_nondecomp_regression.cnf  lit.local.cfg  nested_and_witness.cnf  projected.cnf  sat.cnf  synthesis_stale_shareable_regression.cnf  synthesis_wdnnf_regression.cnf  units.cnf  unsat.cnf
tests/unit/: CMakeLists.txt
